--- a/home.htm
+++ b/home.htm
@@ -160,7 +160,7 @@
                         voluptatem facere consequatur odit tempore harum incidunt deleniti. Temporibus, neque velit.
                         Reprehenderit aspernatur harum at saepe dolore inventore asperiores nesciunt ab?</p>
 
-                    <a href="#"><span id="About-por-aspan1">Learn
+                    <a id="about-btn" href="#"><span id="About-por-aspan1">Learn
                             more</span><i class="fas fa-chevron-right"></i></a>
                 </div>
             </div>
