--- a/home.htm
+++ b/home.htm
@@ -458,7 +458,7 @@
                 </div>
             </div>
 
-            <div class="footer-card" style="align-self: normal;">
+            <div class="footer-card" id="insta">
                 <h2>Instagram</h2>
                 <div class="footer-gallery">
                     <img src="Images/xblog_1.webp" alt="">
